--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,8 +8,10 @@ authors = ["AndreasPB <andreas.p.brodersen@gmail.com>"]
 python = "^3.10"
 pandas = "^1.4.2"
 fastapi = "^0.75.2"
-uvicorn = {extras = ["standard"], version = "^0.17.6"}
+uvicorn = { extras = ["standard"], version = "^0.17.6" }
 redis = "^4.2.2"
+pydantic = "^1.9.0"
+lxml = "^4.8.0"
 
 [tool.poetry.dev-dependencies]
 
