--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ python = "^3.10"
 pandas = "^1.4.2"
 fastapi = "^0.75.2"
 uvicorn = {extras = ["standard"], version = "^0.17.6"}
+redis = "^4.2.2"
 
 [tool.poetry.dev-dependencies]
 
