--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,5 @@
 services:
+
   redis:
     image: redis:latest
     ports:
@@ -6,3 +7,14 @@ services:
     volumes:
       - ./config/redis.conf:/redis.conf
     command: [ "redis-server", "/redis.conf" ]
+
+  go_esb:
+    build: ./go_esb
+    container_name: go_esb
+    restart: always
+    ports:
+      - 9999:9999
+    volumes:
+      - ./go_esb:/app
+    depends_on:
+      - redis
