--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,8 @@ services:
     build: ./go_esb
     container_name: go_esb
     restart: always
+    env_file:
+      - .env
     networks:
       - extern
     ports:
